--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+:root{
+  --background-color: #333;
+  --text-color: white;
+  --btn-color: whitesmoke;
+}
+
 body {
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
   margin: 0;
@@ -11,6 +17,7 @@ h1 {
   text-align: center;
   margin-top: 40px;
   margin-bottom: 60px;
+  color: var(--text-color);
 }
 
 form {
@@ -18,6 +25,7 @@ form {
   justify-content: center;
   align-items: center;
   margin-bottom: 60px;
+  gap:  20px;
 }
 
 #search-input {
@@ -33,8 +41,8 @@ form {
 
 #search-button {
   padding: 10px 20px;
-  background-color: #4caf50;
-  color: white;
+  background-color: #32c6c3;
+  color: var(--text-color);
   border: none;
   font-size: 18px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -44,7 +52,7 @@ form {
 }
 
 #search-button:hover {
-  background-color: #3e8e41;
+  background-color: #32c6c3;
 }
 
 .search-results {
@@ -77,16 +85,16 @@ form {
 .search-result a {
   padding: 10px;
   display: block;
-  color: #333;
+  color: var(--text-color);
   text-decoration: none;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 1s ease-in-out;
 }
 
 .search-result:hover a {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-#show-more-button {
+/* #show-more-button {
   background-color: #008cba;
   border: none;
   color: white;
@@ -102,7 +110,7 @@ form {
 
 #show-more-button:hover {
   background-color: #0077b5;
-}
+} */
 
 @media screen and (max-width: 768px) {
   .search-result {
